# apple-music-rich-presence

./: Cargo.toml  README.md  test.json
scripts/: get-now-playing.js
src/: main.rs  music.rs  osascript.rs
