[package]
name = "apple-music-rich-presence"
version = "0.1.0"
edition = "2021"
authors = ["Death_Blows"]
description = "A simple CLI tool to display your Apple Music activity in Discord."
repository = "https://github.com/technorav3nn/apple-music-rich-presence"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-presence = "0.5.14"
pretty-duration = "0.1.1"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
ureq = "2.6.2"
